--- a/Backend/intro-typescript/package.json
+++ b/Backend/intro-typescript/package.json
@@ -8,11 +8,13 @@
   },
   "devDependencies": {},
   "scripts": {
-    "ex1": "tsc && node ./build/triangulos.js",
-    "ex2": "tsc && node ./build/cores.js",
-    "ex3": "tsc && node ./build/comparaDoisNumeros.js",
-    "ex4": "tsc && node ./build/leapYear.js",
-    "ex5": "tsc && node ./build/checaRenovacaoRG.js",
+    "ex1": "tsc && node ./build/exercicio1.js",
+    "ex2": "tsc && node ./build/exercicio2.js",
+    "ex3": "tsc && node ./build/exercicio4.js",
+    "ex4": "tsc && node ./build/exercicio3.js",
+    "ex5": "tsc && node ./build/exercicio5.js",
+    "ex6": "tsc && node ./build/exercicio6.js",
+    "ex8": "tsc && node ./build/exercicio8.js",
     "type": "module"
   },
   "keywords": [],
