--- a/Backend/LabeBank/package.json
+++ b/Backend/LabeBank/package.json
@@ -7,7 +7,7 @@
   },
   "name": "labebank",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "app.js",
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
@@ -15,8 +15,8 @@
     "ts-node-dev": "^2.0.0"
   },
   "scripts": {
-    "dev": "ts-node-dev ./src/server.ts",
-    "start": "tsc && node ./build/server.js"
+    "dev": "ts-node-dev ./src/app.ts",
+    "start": "tsc && node ./build/app.js"
   },
   "keywords": [],
   "author": "",
