--- a/Backend/to-do-list/package.json
+++ b/Backend/to-do-list/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && node ./build/index.js",
+    "start": "tsc && node ./build/endpoints/index.js",
     "migrations": "tsc && node ./build/database/migrations.js"
   },
   "keywords": [],
@@ -15,6 +15,7 @@
     "@types/express": "^4.17.13",
     "@types/knex": "^0.16.1",
     "@types/node": "^18.0.3",
+    "@types/uuid": "^8.3.4",
     "typescript": "^4.7.4"
   },
   "dependencies": {
@@ -22,6 +23,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "knex": "^2.1.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "uuid": "^9.0.0"
   }
 }
