--- a/Backend/lab-ecommerce/package.json
+++ b/Backend/lab-ecommerce/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/nodemailer": "^6.4.6",
     "@types/uuid": "^8.3.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.3"
@@ -25,6 +26,7 @@
     "express": "^4.18.1",
     "knex": "^2.3.0",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.7.8",
     "uuid": "^9.0.0"
   }
 }
