--- a/Backend/cookenu/package.json
+++ b/Backend/cookenu/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
@@ -8,6 +9,7 @@
     "@types/node": "^18.11.9",
     "@types/uuid": "^8.3.4",
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
