--- a/case-shopper/package.json
+++ b/case-shopper/package.json
@@ -6,6 +6,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^2.3.0",
     "mysql": "^2.18.1",
+    "typescript": "^4.9.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
