--- a/case-shopper/package.json
+++ b/case-shopper/package.json
@@ -6,6 +6,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^2.3.0",
     "mysql": "^2.18.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3",
     "uuid": "^9.0.0"
   },
@@ -19,6 +20,7 @@
     "dotenv": "^16.0.3"
   },
   "scripts": {
+    "dev": "ts-node-dev ./src/index.ts",
     "start": "tsc && node ./build/index.js",
     "migrations": "tsc && node ./build/data/migrations.js",
     "test": "echo \"Error: no test specified\" && exit 1"
